syntax = "proto3";

option csharp_namespace = "WeatherServiceProtos";

service AuthService {
	rpc Register (RegisterRequest) returns (RegisterResponse);
	rpc Authenticate (AuthRequest) returns (AuthResponse);
}

message RegisterRequest {
	string username = 1;
	string password = 2;
}

message RegisterResponse {
	int32 errorCode = 1;
	string errorMessage = 2;
	string token = 3;
}

message AuthRequest {
	string username = 1;
	string password = 2;
}

message AuthResponse {
	int32 errorCode = 1;
	string errorMessage = 2;
	string token = 3;
}